// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FaceLabelingTrainApply /> should render properly when unapplied changes is false and there is a training job 1`] = `
.emotion-5 {
  padding: 16px;
  border-bottom: 1px solid #3b3b3b;
}

.emotion-0 {
  height: 16px;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-2 {
  border: 0;
  background-color: inherit;
  color: #808080;
  margin-left: 8px;
}

.emotion-2:hover {
  color: #ffffff;
  cursor: pointer;
}

.emotion-1 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
}

.emotion-1:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-1[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-1,
.emotion-1:hover,
.emotion-1:visited {
  background-color: #73b61c;
}

.emotion-1:hover {
  background-color: #96c955;
}

.emotion-1[aria-disabled=true] {
  background-color: #808080;
}

<div
  className="emotion-5"
>
  <FaceLebalingMessage
    error=""
    jobId="1a1d45af-7477-1396-ae57-a618e8efb91f"
    previousJobId="1a1d45af-7477-1396-ae57-a618e8efb91f"
    projectId="76917058-b147-4556-987a-0a0f11e46d9b"
    setPreviousJobId={[Function]}
  />
  <span>
    Once a name has been added to a face, training can begin. Names can continue to be edited as needed.
  </span>
  <div
    className="emotion-0"
  />
  <div
    className="emotion-4"
  >
    <button
      className="emotion-1"
      onClick={[Function]}
      type="button"
    >
      Override Current Training & Re-apply
    </button>
    <div
      className="emotion-3"
    >
      <button
        aria-label="Training Help"
        className="emotion-2"
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        type="button"
      >
        <svg
          data-file-name="help.svg"
          height={20}
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`<FaceLabelingTrainApply /> should render properly when unapplied changes is false and there is a training job 2`] = `
.emotion-6 {
  padding: 16px;
  border-bottom: 1px solid #3b3b3b;
}

.emotion-0 {
  height: 16px;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-2 {
  border: 0;
  background-color: inherit;
  color: #808080;
  margin-left: 8px;
}

.emotion-2:hover {
  color: #ffffff;
  cursor: pointer;
}

.emotion-1 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
}

.emotion-1:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-1[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-1,
.emotion-1:hover,
.emotion-1:visited {
  background-color: #73b61c;
}

.emotion-1:hover {
  background-color: #96c955;
}

.emotion-1[aria-disabled=true] {
  background-color: #808080;
}

.emotion-4 {
  position: absolute;
  top: 47px;
  left: 0;
  z-index: 1;
  background-color: #4a4a4a;
  border: 1px solid #ffffff;
  border-radius: 2px;
  padding: 12px;
}

<div
  className="emotion-6"
>
  <FaceLebalingMessage
    error=""
    jobId="1a1d45af-7477-1396-ae57-a618e8efb91f"
    previousJobId="1a1d45af-7477-1396-ae57-a618e8efb91f"
    projectId="76917058-b147-4556-987a-0a0f11e46d9b"
    setPreviousJobId={[Function]}
  />
  <span>
    Once a name has been added to a face, training can begin. Names can continue to be edited as needed.
  </span>
  <div
    className="emotion-0"
  />
  <div
    className="emotion-5"
  >
    <button
      className="emotion-1"
      onClick={[Function]}
      type="button"
    >
      Override Current Training & Re-apply
    </button>
    <div
      className="emotion-3"
    >
      <button
        aria-label="Training Help"
        className="emotion-2"
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        type="button"
      >
        <svg
          data-file-name="help.svg"
          height={20}
        />
      </button>
    </div>
    <div
      className="emotion-4"
    >
      There are newly saved labels that have not been used for training. Stop current training and restart with the latest labels.
    </div>
  </div>
</div>
`;

exports[`<FaceLabelingTrainApply /> should render properly when unapplied changes is false and there is a training job 3`] = `
.emotion-5 {
  padding: 16px;
  border-bottom: 1px solid #3b3b3b;
}

.emotion-0 {
  height: 16px;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-2 {
  border: 0;
  background-color: inherit;
  color: #808080;
  margin-left: 8px;
}

.emotion-2:hover {
  color: #ffffff;
  cursor: pointer;
}

.emotion-1 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
}

.emotion-1:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-1[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-1,
.emotion-1:hover,
.emotion-1:visited {
  background-color: #73b61c;
}

.emotion-1:hover {
  background-color: #96c955;
}

.emotion-1[aria-disabled=true] {
  background-color: #808080;
}

<div
  className="emotion-5"
>
  <FaceLebalingMessage
    error=""
    jobId="1a1d45af-7477-1396-ae57-a618e8efb91f"
    previousJobId="1a1d45af-7477-1396-ae57-a618e8efb91f"
    projectId="76917058-b147-4556-987a-0a0f11e46d9b"
    setPreviousJobId={[Function]}
  />
  <span>
    Once a name has been added to a face, training can begin. Names can continue to be edited as needed.
  </span>
  <div
    className="emotion-0"
  />
  <div
    className="emotion-4"
  >
    <button
      className="emotion-1"
      onClick={[Function]}
      type="button"
    >
      Override Current Training & Re-apply
    </button>
    <div
      className="emotion-3"
    >
      <button
        aria-label="Training Help"
        className="emotion-2"
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        type="button"
      >
        <svg
          data-file-name="help.svg"
          height={20}
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`<FaceLabelingTrainApply /> should render properly when unapplied changes is false and there is a training job 4`] = `
.emotion-6 {
  padding: 16px;
  border-bottom: 1px solid #3b3b3b;
}

.emotion-0 {
  height: 16px;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-2 {
  border: 0;
  background-color: inherit;
  color: #808080;
  margin-left: 8px;
}

.emotion-2:hover {
  color: #ffffff;
  cursor: pointer;
}

.emotion-1 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
}

.emotion-1:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-1[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-1,
.emotion-1:hover,
.emotion-1:visited {
  background-color: #73b61c;
}

.emotion-1:hover {
  background-color: #96c955;
}

.emotion-1[aria-disabled=true] {
  background-color: #808080;
}

.emotion-4 {
  position: absolute;
  top: 47px;
  left: 0;
  z-index: 1;
  background-color: #4a4a4a;
  border: 1px solid #ffffff;
  border-radius: 2px;
  padding: 12px;
}

<div
  className="emotion-6"
>
  <FaceLebalingMessage
    error=""
    jobId="1a1d45af-7477-1396-ae57-a618e8efb91f"
    previousJobId="1a1d45af-7477-1396-ae57-a618e8efb91f"
    projectId="76917058-b147-4556-987a-0a0f11e46d9b"
    setPreviousJobId={[Function]}
  />
  <span>
    Once a name has been added to a face, training can begin. Names can continue to be edited as needed.
  </span>
  <div
    className="emotion-0"
  />
  <div
    className="emotion-5"
  >
    <button
      className="emotion-1"
      onClick={[Function]}
      type="button"
    >
      Override Current Training & Re-apply
    </button>
    <div
      className="emotion-3"
    >
      <button
        aria-label="Training Help"
        className="emotion-2"
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        type="button"
      >
        <svg
          data-file-name="help.svg"
          height={20}
        />
      </button>
    </div>
    <div
      className="emotion-4"
    >
      There are newly saved labels that have not been used for training. Stop current training and restart with the latest labels.
    </div>
  </div>
</div>
`;

exports[`<FaceLabelingTrainApply /> should render properly when unapplied changes is false and there is a training job 5`] = `
.emotion-5 {
  padding: 16px;
  border-bottom: 1px solid #3b3b3b;
}

.emotion-0 {
  height: 16px;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-2 {
  border: 0;
  background-color: inherit;
  color: #808080;
  margin-left: 8px;
}

.emotion-2:hover {
  color: #ffffff;
  cursor: pointer;
}

.emotion-1 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
}

.emotion-1:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-1[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-1,
.emotion-1:hover,
.emotion-1:visited {
  background-color: #73b61c;
}

.emotion-1:hover {
  background-color: #96c955;
}

.emotion-1[aria-disabled=true] {
  background-color: #808080;
}

<div
  className="emotion-5"
>
  <FaceLebalingMessage
    error=""
    jobId="1a1d45af-7477-1396-ae57-a618e8efb91f"
    previousJobId="1a1d45af-7477-1396-ae57-a618e8efb91f"
    projectId="76917058-b147-4556-987a-0a0f11e46d9b"
    setPreviousJobId={[Function]}
  />
  <span>
    Once a name has been added to a face, training can begin. Names can continue to be edited as needed.
  </span>
  <div
    className="emotion-0"
  />
  <div
    className="emotion-4"
  >
    <button
      className="emotion-1"
      onClick={[Function]}
      type="button"
    >
      Override Current Training & Re-apply
    </button>
    <div
      className="emotion-3"
    >
      <button
        aria-label="Training Help"
        className="emotion-2"
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        type="button"
      >
        <svg
          data-file-name="help.svg"
          height={20}
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`<FaceLabelingTrainApply /> should render properly when unapplied changes is true and there is no training job 1`] = `
.emotion-5 {
  padding: 16px;
  border-bottom: 1px solid #3b3b3b;
}

.emotion-0 {
  height: 16px;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.emotion-1 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: not-allowed;
  color: #ffffff;
  background-color: transparent;
}

.emotion-1:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-1[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-1,
.emotion-1:hover,
.emotion-1:visited {
  background-color: #73b61c;
}

.emotion-1:hover {
  background-color: #96c955;
}

.emotion-1[aria-disabled=true] {
  background-color: #808080;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-2 {
  border: 0;
  background-color: inherit;
  color: #808080;
  margin-left: 8px;
}

.emotion-2:hover {
  color: #ffffff;
  cursor: pointer;
}

<div
  className="emotion-5"
>
  <FaceLebalingMessage
    error=""
    jobId=""
    previousJobId=""
    projectId="76917058-b147-4556-987a-0a0f11e46d9b"
    setPreviousJobId={[Function]}
  />
  <span>
    Once a name has been added to a face, training can begin. Names can continue to be edited as needed.
  </span>
  <div
    className="emotion-0"
  />
  <div
    className="emotion-4"
  >
    <button
      aria-disabled={true}
      className="emotion-1"
      onClick={[Function]}
      type="button"
    >
      Train & Apply
    </button>
    <div
      className="emotion-3"
    >
      <button
        aria-label="Training Help"
        className="emotion-2"
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        type="button"
      >
        <svg
          data-file-name="help.svg"
          height={20}
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`<FaceLabelingTrainApply /> should render properly when unapplied changes is true and there is no training job 2`] = `
.emotion-5 {
  padding: 16px;
  border-bottom: 1px solid #3b3b3b;
}

.emotion-0 {
  height: 16px;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.emotion-1 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: not-allowed;
  color: #ffffff;
  background-color: transparent;
}

.emotion-1:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-1[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-1,
.emotion-1:hover,
.emotion-1:visited {
  background-color: #73b61c;
}

.emotion-1:hover {
  background-color: #96c955;
}

.emotion-1[aria-disabled=true] {
  background-color: #808080;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-2 {
  border: 0;
  background-color: inherit;
  color: #808080;
  margin-left: 8px;
}

.emotion-2:hover {
  color: #ffffff;
  cursor: pointer;
}

<div
  className="emotion-5"
>
  <FaceLebalingMessage
    error=""
    jobId=""
    previousJobId=""
    projectId="76917058-b147-4556-987a-0a0f11e46d9b"
    setPreviousJobId={[Function]}
  />
  <span>
    Once a name has been added to a face, training can begin. Names can continue to be edited as needed.
  </span>
  <div
    className="emotion-0"
  />
  <div
    className="emotion-4"
  >
    <button
      aria-disabled={true}
      className="emotion-1"
      onClick={[Function]}
      type="button"
    >
      Train & Apply
    </button>
    <div
      className="emotion-3"
    >
      <button
        aria-label="Training Help"
        className="emotion-2"
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        type="button"
      >
        <svg
          data-file-name="help.svg"
          height={20}
        />
      </button>
    </div>
  </div>
</div>
`;
